// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Interface Should convert coalesce 1 sql (SELECT COALESCE(id, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "type": "Number",
          },
          Object {
            "nullable": true,
            "type": "String",
          },
        ],
        "nullable": false,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 2 sql (SELECT COALESCE(character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "type": "String",
          },
          Object {
            "type": "Number",
          },
        ],
        "nullable": false,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 3 sql (SELECT COALESCE(12, character_col, id) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "literal": 12,
            "type": "Number",
          },
          Object {
            "nullable": true,
            "type": "String",
          },
          Object {
            "type": "Number",
          },
        ],
        "nullable": false,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert coalesce 4 sql (SELECT COALESCE(integer_col, character_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "coalesce",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "type": "Number",
          },
          Object {
            "nullable": true,
            "type": "String",
          },
        ],
        "nullable": true,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from table sql (SELECT (item).supplier_id FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert composite type from view sql (SELECT (item).supplier_id FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "supplier_id",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert different result types sql (SELECT * FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "nullable": true,
        "type": "BigInt",
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "type": "BigInt",
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "nullable": true,
        "type": "Boolean",
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "type": "Buffer",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "nullable": true,
        "type": "Json",
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "nullable": true,
        "type": "Json",
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "nullable": true,
            "type": "String",
          },
          "price": Object {
            "nullable": true,
            "type": "Number",
          },
          "supplier_id": Object {
            "nullable": true,
            "type": "Number",
          },
        },
        "name": "inventory_item",
        "schema": "public",
        "type": "CompositeConstant",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Active",
            "type": "String",
          },
          Object {
            "literal": "Pending",
            "type": "String",
          },
          Object {
            "literal": "Dispute",
            "type": "String",
          },
          Object {
            "literal": "Closed",
            "type": "String",
          },
        ],
        "nullable": true,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum column sql (SELECT state FROM account_levelisations) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Pending",
            "type": "String",
          },
          Object {
            "literal": "Done",
            "type": "String",
          },
        ],
        "nullable": false,
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert enum sql (SELECT 'Pending'::account_levelisation_state) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "row",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Pending",
            "type": "String",
          },
          Object {
            "literal": "Done",
            "type": "String",
          },
        ],
        "type": "UnionConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result double sql (SELECT ABS(ABS(integer_col)) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert function result single sql (SELECT ABS(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function explicit type sql (SELECT ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)::int[] FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "array",
      "type": Object {
        "items": Object {
          "type": "Number",
        },
        "type": "ArrayConstant",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert nested function guess type sql (SELECT ABS(ARRAY_LENGTH(ARRAY_AGG(integer_col), 1)) FROM all_types GROUP BY id) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "abs",
      "type": Object {
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators integer sql (SELECT integer_col + integer_col AS "test1" FROM all_types WHERE id = $id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "OptionalConstant",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert operators string sql (SELECT character_col + integer_col AS "test1" FROM all_types WHERE character_col = $text) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "text",
      "type": Object {
        "nullable": true,
        "type": "OptionalConstant",
        "value": Object {
          "nullable": true,
          "type": "String",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "test1",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter coalesce sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "OptionalConstant",
        "value": Object {
          "nullable": true,
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert parameter required sql (SELECT character_col FROM all_types WHERE integer_col > $id!) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": false,
        "type": "OptionalConstant",
        "value": Object {
          "nullable": true,
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert select where sql (SELECT character_col FROM all_types WHERE integer_col > COALESCE($id, 2)) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "OptionalConstant",
        "value": Object {
          "nullable": true,
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert simple sql (SELECT id, character_col FROM all_types WHERE id = :id) 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "type": "OptionalConstant",
        "value": Object {
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert sum sql (SELECT SUM(integer_col) FROM all_types) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "sum",
      "type": Object {
        "type": "BigInt",
      },
    },
  ],
}
`;

exports[`Query Interface Should convert views types sql (SELECT * FROM all_types_view) 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "not_null",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "default_not_null",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "bigint_col",
      "type": Object {
        "nullable": true,
        "type": "BigInt",
      },
    },
    Object {
      "name": "bigserial_col",
      "type": Object {
        "type": "BigInt",
      },
    },
    Object {
      "name": "bit_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "bit_varying_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "boolean_col",
      "type": Object {
        "nullable": true,
        "type": "Boolean",
      },
    },
    Object {
      "name": "box_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "bytea_col",
      "type": Object {
        "type": "Buffer",
      },
    },
    Object {
      "name": "character_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "character_varying_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "cidr_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "circle_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "radius",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "date_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "double_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "inet_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "integer_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "interval_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "years",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "months",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "days",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "hours",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "minutes",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "seconds",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "milliseconds",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "json_col",
      "type": Object {
        "nullable": true,
        "type": "Json",
      },
    },
    Object {
      "name": "jsonb_col",
      "type": Object {
        "nullable": true,
        "type": "Json",
      },
    },
    Object {
      "name": "line_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "lseg_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "macaddr_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "money_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "numeric_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "path_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "pg_lsn_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "point_col",
      "type": Object {
        "items": Array [
          Object {
            "name": "x",
            "type": Object {
              "type": "Number",
            },
          },
          Object {
            "name": "y",
            "type": Object {
              "type": "Number",
            },
          },
        ],
        "type": "ObjectLiteralConstant",
      },
    },
    Object {
      "name": "polygon_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "real_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "smallint_col",
      "type": Object {
        "nullable": true,
        "type": "Number",
      },
    },
    Object {
      "name": "smallserial_col",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "serial_col",
      "type": Object {
        "type": "Number",
      },
    },
    Object {
      "name": "text_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "time_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "time_with_time_zone_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "timestamp_with_time_zone_col",
      "type": Object {
        "nullable": true,
        "type": "Date",
      },
    },
    Object {
      "name": "tsquery_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "tsvector_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "txid_snapshot_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "uuid_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "xml_col",
      "type": Object {
        "nullable": true,
        "type": "String",
      },
    },
    Object {
      "name": "item",
      "type": Object {
        "attributes": Object {
          "name": Object {
            "nullable": true,
            "type": "String",
          },
          "price": Object {
            "nullable": true,
            "type": "Number",
          },
          "supplier_id": Object {
            "nullable": true,
            "type": "Number",
          },
        },
        "name": "inventory_item",
        "schema": "public",
        "type": "CompositeConstant",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "literal": "Active",
            "type": "String",
          },
          Object {
            "literal": "Pending",
            "type": "String",
          },
          Object {
            "literal": "Dispute",
            "type": "String",
          },
          Object {
            "literal": "Closed",
            "type": "String",
          },
        ],
        "nullable": true,
        "type": "UnionConstant",
      },
    },
  ],
}
`;
